Remade pr4 + changes